# SpellbookRoguelike

./: .gitignore  drafting.py  generators.py  index.html  main.py  old_main.py  package-lock.json  package.json  pyproject.toml  run_server.py  server.py  sound_utils.py  todo.py  utils.py
content/: aspirations.py  command_generators.py  enemies.py  enemy_actions.py  enemy_factions.py  items.py  pages.py  rest_actions.py  rituals.py  spells.py  trigger_functions.py
model/: action.py  combat_entity.py  condition.py  encounter.py  enemy.py  event.py  faction.py  game_state.py  grimoire.py  haven.py  item.py  map.py  old_map.py  party_member_state.py  player.py  recipe.py  region_draft.py  rest_site.py  ritual.py  route.py  safehouse.py  shop.py  spell_draft.py  spellbook.py  triggers.py
saves/: main.pkl
server/: server.py
